--- a/assets/styles/scrollTopArr.css
+++ b/assets/styles/scrollTopArr.css
@@ -1,5 +1,3 @@
-
-
 .scrollToTopArrow{
     position: fixed;
     bottom: 15%;
@@ -7,8 +5,8 @@
 }
 
 footer img{margin-left:20px;}
-footer span{position: relative;
-    bottom: 4px; }
+.iconSpan{position: relative;
+    bottom: -6px; }
 a{text-decoration:none; color:#ffff;}
 
 
@@ -16,6 +14,14 @@ a{text-decoration:none; color:#ffff;}
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.fa.fa-twitter{
+	font-family:sans-serif;
+}
+.fa.fa-twitter::before{
+	content:"𝕏";
+	font-size:1.2em;
 }
 
 
